--- a/index.html
+++ b/index.html
@@ -21,13 +21,54 @@
   </head>
 
   <body>
-    Reliable, efficient delivery Powered by Technology Our Artificial
-    Intelligence powered tools use millions of project data points to ensure
-    that your project is successful Supervisor Monitors activity to identify
-    project roadblocks Team Builder Scans our talent network to create the
-    optimal team for your project Karma Regularly evaluates our talent to ensure
-    quality Calculator Uses data from past projects to provide better delivery
-    estimates
+    <main class="container">
+      <h1 class="heading-primary">Reliable, efficient delivery</h1>
+      <h2 class="heading-secondary">Powered by Technology</h2>
+      <p class="about-text">
+        Our Artificial Intelligence powered tools use millions of project data
+        points to ensure that your project is successful
+      </p>
+      <section class="feature-card">
+        <h3 class="feature-card_heading">Supervisor</h3>
+        <p class="feature-card_text">
+          Monitors activity to identify project roadblocks
+        </p>
+        <img
+          src="images/icon-supervisor.svg"
+          alt="Supervising"
+          class="feature-card_icon" />
+      </section>
+      <section class="feature-card">
+        <h3 class="feature-card_heading">Team Builder</h3>
+        <p class="feature-card_text">
+          Scans our talent network to create the optimal team for your project
+        </p>
+        <img
+          src="images/icon-team-builder.svg"
+          alt="team building"
+          class="feature-card_icon" />
+      </section>
+      <section class="feature-card">
+        <h3 class="feature-card_heading">Karma</h3>
+        <p class="feature-card_text">
+          Regularly evaluates our talent to ensure quality
+        </p>
+        <img
+          src="images/icon-karma.svg"
+          alt="bulb illuminating"
+          class="feature-card_icon" />
+      </section>
+      <section class="feature-card">
+        <h3 class="feature-card_heading">Calculator</h3>
+        <p class="feature-card_text">
+          Uses data from past projects to provide better delivery estimates
+        </p>
+        <img
+          src="images/icon-calculator.svg"
+          alt="Calculator"
+          class="feature-card_icon" />
+      </section>
+    </main>
 
     <footer>
       <p class="attribution">
