--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         Our Artificial Intelligence powered tools use millions of project data
         points to ensure that your project is successful
       </p>
+
       <section class="feature-card">
         <h3 class="feature-card_heading">Supervisor</h3>
         <p class="feature-card_text">
@@ -38,6 +39,7 @@
           alt="Supervising"
           class="feature-card_icon" />
       </section>
+
       <section class="feature-card">
         <h3 class="feature-card_heading">Team Builder</h3>
         <p class="feature-card_text">
@@ -48,6 +50,7 @@
           alt="team building"
           class="feature-card_icon" />
       </section>
+
       <section class="feature-card">
         <h3 class="feature-card_heading">Karma</h3>
         <p class="feature-card_text">
@@ -58,6 +61,7 @@
           alt="bulb illuminating"
           class="feature-card_icon" />
       </section>
+
       <section class="feature-card">
         <h3 class="feature-card_heading">Calculator</h3>
         <p class="feature-card_text">
@@ -70,13 +74,8 @@
       </section>
     </main>
 
-    <footer>
-      <p class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
-      </p>
+    <footer class="footer">
+      Coded by <a href="https://github.com/hphemanathan">Hemanathan H P</a>
     </footer>
   </body>
 </html>
