--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         points to ensure that your project is successful
       </p>
 
-      <section class="feature-card">
+      <section class="feature-card supervisor-card">
         <h3 class="feature-card_heading">Supervisor</h3>
         <p class="feature-card_text">
           Monitors activity to identify project roadblocks
@@ -40,7 +40,7 @@
           class="feature-card_icon" />
       </section>
 
-      <section class="feature-card">
+      <section class="feature-card teamBuilder-card">
         <h3 class="feature-card_heading">Team Builder</h3>
         <p class="feature-card_text">
           Scans our talent network to create the optimal team for your project
@@ -51,7 +51,7 @@
           class="feature-card_icon" />
       </section>
 
-      <section class="feature-card">
+      <section class="feature-card karma-card">
         <h3 class="feature-card_heading">Karma</h3>
         <p class="feature-card_text">
           Regularly evaluates our talent to ensure quality
@@ -62,7 +62,7 @@
           class="feature-card_icon" />
       </section>
 
-      <section class="feature-card">
+      <section class="feature-card calculator-card">
         <h3 class="feature-card_heading">Calculator</h3>
         <p class="feature-card_text">
           Uses data from past projects to provide better delivery estimates
