--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         Our Artificial Intelligence powered tools use millions of project data
         <span> points to ensure that your project is successful</span>
       </p>
+
       <section class="flex-wrapper">
-        <section
-          class="feature-card supervisor-ca@media (min-width: 68.75em) { font-size: 2.25rem; }rd">
+        <section class="feature-card supervisor-card">
           <h3 class="feature-card_heading">Supervisor</h3>
           <p class="feature-card_text">
             Monitors activity to identify project roadblocks
